--- a/css/uso_do_css.html
+++ b/css/uso_do_css.html
@@ -8,8 +8,11 @@
 <body>
     <p>Evolua seu lado Geek!</p>
     
-    <span>Outro texto qualquer</span>
+    <span class="verde">Outro texto qualquer</span>
 
-    <p> Outro parágrafo</p>
+    <p class="verde"> Outro parágrafo</p>
+
+    <p id="p2">Outra frase no estilo ID</p>
+
 </body>
 </html>
