--- a/JS/index.html
+++ b/JS/index.html
@@ -16,6 +16,9 @@
         <br/><br/>
         <button onclick="mudar_texto()" id = "but">Muda H1</button>
     
+        <br/><br/>
+        <button onclick="incrementar();" id = "but">Incrementar</button>
+        <p id="p1">0</p>
     </center>
 
     <script type="text/javascript" src="script.js"></script>
