--- a/Secao04/Index_aula_04_operacoes.html
+++ b/Secao04/Index_aula_04_operacoes.html
@@ -8,7 +8,33 @@
     <h1> Seção 04 - Aula 04</h1>
 
     <script>
-        
+        var num1 = 51;
+        var num2 = 25;
+
+        //soma
+        var res = num1 + num2;
+        console.log("O reultado da soma de: " +num1 ,"e " +num2 ,"é igual a "+ res);
+
+        //subtraçao
+        var res = num1 - num2;
+        console.log("O reultado da subtração de: " +num1 ,"menos " +num2 ,"é igual a "+ res);
+
+        //divisão
+        var res = num1 / num2;
+        console.log("O reultado da divisão de: " +num1 ,"por " +num2 ,"é igual a "+ res);
+
+        //multiplicação
+        var res = num1 * num2;
+        console.log("O reultado da multiplicação de: " +num1 ,"por " +num2 ,"é igual a "+ res);
+
+        //modulo de resto
+        res = num1 % 2;
+        console.log(res);
+
+        //incremento
+        num1 = num1 + 1;
+        console.log(num1);
+
        
     </script>
 
