--- a/Secao04/Index_aula_06_operadoresLogicos.html
+++ b/Secao04/Index_aula_06_operadoresLogicos.html
@@ -20,6 +20,24 @@
         }else{
             console.log('O curso não é de JS ou não é legal =/');
         }
+
+        //Or (ou = pelo menos uma expressão deve ser verdadeira)
+        if(curso === 'Javascript' || legal === true){
+            console.log("O curso é de JS ou é Legal")
+        }else{
+            console.log('O curso não é legal nem de JS')
+        }
+
+        //not (quando queremos fazer uma negação ou algo não é como esperado)
+        if (curso != 'Javascript'){
+            console.log("O curso não é de JS")
+        }else{
+            console.log('O curso é de JS')
+        }if(legal != true){
+            console.log("O curso não é legal")
+        }else{
+            console.log('Este curso é legal! =]')
+        }
        
     </script>
 
